--- a/netlify/functions/og/templates/talk.html
+++ b/netlify/functions/og/templates/talk.html
@@ -1,5 +1,6 @@
 <style>
-    h1 { color: blue }
+    body {width: 1200px; height: 630px; border: 1px solid black; background: rgb(49, 196, 141); color: white; }
+    h1 {  }
 </style>
 
 <body>
