--- a/netlify/functions/og/templates/main.html
+++ b/netlify/functions/og/templates/main.html
@@ -4,7 +4,7 @@
     <style>
         body {
             margin: 0;
-            background: linear-gradient(135deg, rgba(49,196,141,1) 0%, rgba(22,116,105,1) 100%);
+            background: linear-gradient(135deg, rgba(118,169,250,1) 0%, rgba(49,196,141,1) 100%);
             color: white;
             display: flex;
             align-items: center;
@@ -21,7 +21,7 @@
             width: 100%;
         }
         mark {
-            color:rgb(49, 196, 141);
+            color:black;
             background-color: white;
         }
         footer {
