Push avatar to bottom of OG images

--- a/netlify/functions/og/templates/main.html
+++ b/netlify/functions/og/templates/main.html
@@ -3,6 +3,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap" rel="stylesheet">
     <style>
         body {
+            height: 630px;
+            width: 1200px;
             margin: 0;
             background: linear-gradient(135deg, rgba(118,169,250,1) 0%, rgba(49,196,141,1) 100%);
             color: white;
@@ -21,8 +23,7 @@
             width: 100%;
         }
         mark {
-            color:black;
-            background-color: white;
+            color:white;
         }
         footer {
             width: 100%;
