--- a/netlify/functions/og/templates/presentation.html
+++ b/netlify/functions/og/templates/presentation.html
@@ -3,6 +3,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap" rel="stylesheet">
     <style>
         body {
+            height: 630px;
+            width: 1200px;
             margin: 0;
             background: linear-gradient(135deg, rgba(49,196,141,1) 0%, rgba(22,116,105,1) 100%);
             color: white;
