--- a/netlify/functions/og/templates/main.html
+++ b/netlify/functions/og/templates/main.html
@@ -22,9 +22,6 @@
             font-size: 4em;
             width: 100%;
         }
-        mark {
-            color:white;
-        }
         footer {
             width: 100%;
             margin-top: auto;
@@ -44,9 +41,7 @@
 </head>
 
 <body>
-<h1>
-    <mark>{title}</mark>
-</h1>
+<h1>{title}</h1>
 <footer>
     <span>@_phzn</span>
     <img src="https://lws-io.netlify.app/images/avatar-transparent.png">
