Changed OG URLs

--- a/netlify/functions/og/templates/main.html
+++ b/netlify/functions/og/templates/main.html
@@ -44,7 +44,7 @@
 <h1>{title}</h1>
 <footer>
     <span>@_phzn</span>
-    <img src="https://lws-io.netlify.app/images/avatar-transparent.png">
+    <img src="https://lws.io/images/avatar-transparent.png">
     <span style="text-align: left">lws.io</span>
 </footer>
 </body>
