Updated OG templates

--- a/netlify/functions/og/templates/article.html
+++ b/netlify/functions/og/templates/article.html
@@ -22,10 +22,6 @@
             font-size: 4em;
             width: 100%;
         }
-        mark {
-            color:rgb(118,169,250);
-            background-color: white;
-        }
         footer {
             width: 100%;
             margin-top: auto;
@@ -45,9 +41,7 @@
 </head>
 
 <body>
-<h1>
-    <mark>{title}</mark>
-</h1>
+<h1>{title}</h1>
 <footer>
     <span>@_phzn</span>
     <img src="https://lws.io/images/avatar-transparent.png">
